--- a/app/src/main/res/layout/activity_requests.xml
+++ b/app/src/main/res/layout/activity_requests.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color09"
-    tools:context=".activity.RequestActivity">
+    tools:context=".activity.main.RequestActivity">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="0dp"
