--- a/app/src/main/res/layout/activity_intro.xml
+++ b/app/src/main/res/layout/activity_intro.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/color06"
-    tools:context=".activity.ManagementActivity">
+    tools:context=".activity.finance.ManagementActivity">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
