--- a/app/src/main/res/values/string.xml
+++ b/app/src/main/res/values/string.xml
@@ -14,6 +14,7 @@
     <string name="travel_code">کد سفر</string>
     <string name="linkToSite">قوانین و مقررات</string>
     <string name="agree">قبول دارم</string>
+    <string name="loading">لطفا صبر کنید!</string>
     <string name="travel_type">نوع سفر</string>
     <string name="return_main">بازگشت به صفحه اصلی</string>
     <string name="credit_">اعتباری</string>
@@ -22,6 +23,7 @@
     <string name="increase_credit">افزایش اعتبار به مبلغ</string>
     <string name="successful_travels">سفرهای موفق</string>
     <string name="travel">سفر</string>
+    <string name="travel_credit">مبلغ قابل پرداخت</string>
     <string name="total_payments">جمع پرداختی ها</string>
     <string name="score_intro">امتیاز معرفی</string>
     <string name="intro">دوستان و آشنایان خود را با استفاده از کد معرفی به دیجی پیک معرفی کنید و امتیاز خود را دریافت کنید!</string>
@@ -32,7 +34,18 @@
     <string name="request">درخواست مجدد</string>
     <string name="details">جزئیات</string>
     <string name="new_req">درخواست جدید</string>
+    <string name="online_payment">پرداخت آنلاین</string>
+    <string name="cache_payment">پرداخت نقدی</string>
     <string name="ongoing">در حال انجام</string>
+    <string name="gift_card">کد هدیه</string>
+    <string name="gift_card_">کد هدیه: </string>
+    <string name="discount_code">کد معرف: </string>
+    <string name="exit_profile">خروج از حساب</string>
+    <string name="save">ثبت</string>
+    <string name="profile_text">تا اطلاع ثانوی امکان تغییر شماره تلفن همراه توسط کاربران وجود ندارد.</string>
+    <string name="show_setting">اعلان تنظیمات</string>
+    <string name="charge_with_gift_code">شارژ حساب با کد هدیه</string>
+    <string name="gift_card_text">جهت شارژ حساب خود کد هدیه را در بخش زیر وارد کنید.</string>
     <string name="unsuccessful">ناموفق</string>
     <string name="scheduled">زمانبندی شده</string>
     <string name="finding">درحال یافتن نزدیک ترین سفیر!</string>
@@ -83,7 +96,6 @@
     <string name="access_token">pk.eyJ1IjoibWFoc2hpZDk2IiwiYSI6ImNrMjFqM3NzdDBjZ2EzZHBneGl2NTYycDYifQ.WKb4zRXSAwB0xR2rMxuPHQ</string>
     <string name="user_location_permission_not_granted">برای ادامه ی مراحل لطفا مکان یاب خود را روشن کنید!</string>
     <string name="exit">خروج</string>
-
 
 
 </resources>
