--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,18 +8,20 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
-    <style name="NavigationView" >
+    <style name="NavigationView">
         <item name="android:listDivider">@drawable/divider</item>
         <item name="android:textColorSecondary">@color/white</item>
         <item name="android:dividerPadding">30dp</item>
 
 
-         </style>
+    </style>
+
     <style name="item_text">
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">16sp</item>
 
     </style>
+
     <style name="common_text">
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">18sp</item>
@@ -46,6 +48,7 @@
         <item name="android:paddingLeft">15dp</item>
 
     </style>
+
     <style name="gray_16">
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">16sp</item>
@@ -64,6 +67,7 @@
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/black</item>
     </style>
+
     <style name="text_blue_14">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/blue</item>
@@ -74,12 +78,13 @@
         <item name="android:textSize">20sp</item>
         <item name="android:textColor">@color/white</item>
     </style>
+
     <style name="top_tab">
         <item name="android:layout_marginRight">30dp</item>
         <item name="android:layout_marginLeft">30dp</item>
         <item name="android:layout_marginTop">-50dp</item>
         <item name="android:paddingTop">10dp</item>
-        </style>
+    </style>
 
     <style name="common_text_white">
         <item name="android:textStyle">bold</item>
@@ -89,6 +94,16 @@
         <item name="android:paddingLeft">10dp</item>
 
     </style>
+
+    <style name="white_bold_16">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:paddingRight">10dp</item>
+        <item name="android:paddingLeft">10dp</item>
+
+    </style>
+
     <style name="common_text_dark_blue">
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">18sp</item>
@@ -97,16 +112,19 @@
         <item name="android:paddingLeft">15dp</item>
 
     </style>
+
     <style name="text_green">
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">@color/green</item>
 
     </style>
+
     <style name="top_down_rectangle">
         <item name="android:paddingTop">20dp</item>
         <item name="android:paddingBottom">20dp</item>
     </style>
+
     <style name="text_pink">
         <item name="android:textSize">18sp</item>
         <item name="android:textStyle">bold</item>
@@ -119,6 +137,7 @@
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">@color/darkGray</item>
     </style>
+
     <style name="tv_return">
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">16sp</item>
@@ -126,10 +145,12 @@
         <item name="android:text">@string/back</item>
     </style>
 
+    <style name="gray_bold_16">
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:textColor">@color/darkGray</item>
 
-
-
-
+    </style>
 
 
 </resources>
